fix: email contents

--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -48,10 +48,9 @@
     >
       <template type="amp-mustache">
         <div class="row">
-          <div>{{"{{"}}customerName{{"}}"}}</div>
-          <div>{{"{{"}}iban{{"}}"}}</div>
-          <div>{{"{{"}}status{{"}}"}}</div>
           <div>{{"{{"}}filename{{"}}"}}</div>
+          <div>{{"{{"}}receivedAt{{"}}"}}</div>
+          <div>{{"{{"}}status{{"}}"}}</div>
         </div>
       </template>
     </amp-list>
