--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -40,7 +40,7 @@
   <body>
     <h3>Szia Lajos!</h3>
     <amp-list
-      src="{{.ApiUrl}}/api/invoices"
+      src="{{.ApiUrl}}/api/invoices?jwt={{.Jwt}}"
       binding="no"
       layout="fixed-height"
       height="44"
