--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -77,7 +77,7 @@
           </form>
           <form
             method="post"
-            action-xhr="[[.ApiUrl]]/updateInvoice?jwt=[[.Jwt]]"
+            action-xhr="[[.ApiUrl]]/api/invoice?jwt=[[.Jwt]]"
             target="_top"
           >
             <fieldset>
