fix: api url in amp

--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -60,7 +60,7 @@
           <div>{{status}}</div>
           <form
             method="post"
-            action-xhr="[[.ApiUrl]]/updateInvoice?jwt=[[.Jwt]]"
+            action-xhr="[[.ApiUrl]]/api/invoices?jwt=[[.Jwt]]"
             target="_top"
           >
             <fieldset>
@@ -77,7 +77,7 @@
           </form>
           <form
             method="post"
-            action-xhr="[[.ApiUrl]]/updateInvoice?jwt=[[.Jwt]]"
+            action-xhr="[[.ApiUrl]]/api/invoices?jwt=[[.Jwt]]"
             target="_top"
           >
             <fieldset>
