--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -40,7 +40,7 @@
   <body>
     <h3>Szia Lajos!</h3>
     <amp-list
-      src="[[.ApiUrl]]/api/invoices?token=[[.Jwt]]"
+      src="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
       binding="no"
       layout="fixed-height"
       height="44"
@@ -54,7 +54,7 @@
           <div>{{status}}</div>
           <form
             method="post"
-            action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Jwt]]"
+            action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
             target="_top"
           >
             <fieldset>
@@ -71,7 +71,7 @@
           </form>
           <form
             method="post"
-            action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Jwt]]"
+            action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
             target="_top"
           >
             <fieldset>
