Pocok 31 - dynamic data request with auth (#14)
* feat: Inserted JWT into html template

* feat: authentication on request

* fix: jwt token in emails

* fix: add todo

* fix: unkeyed composite literal values warning

* refactor: rename customer to vendor

* refactor: change jwt literal to token

* fix: oops i did it again

* test: jwt token package

Co-authored-by: Peter Nemeth <nemethp@inf.u-szeged.hu>

--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -40,7 +40,7 @@
   <body>
     <h3>Szia Lajos!</h3>
     <amp-list
-      src="{{.ApiUrl}}/api/invoices"
+      src="{{.ApiUrl}}/api/invoices?token={{.Token}}"
       binding="no"
       layout="fixed-height"
       height="44"
