--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -49,7 +49,7 @@
     >
       <template type="amp-mustache">
         <div class="row">
-          <div>{{id}}</div>
+          <div>{{invoiceId}}</div>
           <div>{{filename}}</div>
           <div>{{receivedAt}}</div>
           <div>{{status}}</div>
@@ -58,7 +58,7 @@
             action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
           >
             <fieldset>
-              <input type="hidden" name="id" value="{{id}}" />
+              <input type="hidden" name="invoiceId" value="{{invoiceId}}" />
               <input type="hidden" name="status" value="[[.Accepted]]" />
               <input type="submit" value="Accept" />
             </fieldset>
@@ -70,7 +70,7 @@
             action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
           >
             <fieldset>
-              <input type="hidden" name="id" value="{{id}}" />
+              <input type="hidden" name="invoiceId" value="{{invoiceId}}" />
               <input type="hidden" name="status" value="[[.Rejected]]" />
               <input type="submit" value="Reject" />
             </fieldset>
