POCOK-32 - approve invoices (#15)
* feat: Inserted JWT into html template

* feat: authentication on request

* fix: jwt token in emails

* fix: add todo

* feat: removed crazy amp template style

* feat: invoice update

* url fix

* fix: api url in amp

* fix: unkeyed composite literal values warning

* refactor: rename customer to vendor

* refactor: change jwt literal to token

* fix: oops i did it again

* test: jwt token package

* feat: removed crazy amp template style

* feat: invoice update

* fix: api url in amp

* wip

* merge origin

* feat: multipart parser, invoice update api

* chore: rename incoives file

* fix: replcae jwt with token in email template

* chore: use consts for dynamo keys

* chore: use approved/rejected consts

* fix: db update function

* feat: update invoice endpoint

* test: added todo

* fix: template generation panic fix

* fix: summary email template

* feat: parse update invoice post data

* feat: request parser utils

* test: using jwtKet env in tests

* feat: split validate update request

* fix: email attachments properly read from s3

* fix: stuff

Co-authored-by: Peter Nemeth <nemethp@inf.u-szeged.hu>

--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -5,11 +5,6 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script
       async
-      custom-element="amp-bind"
-      src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
-    ></script>
-    <script
-      async
       custom-template="amp-mustache"
       src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"
     ></script>
@@ -18,6 +13,12 @@
       custom-element="amp-list"
       src="https://cdn.ampproject.org/v0/amp-list-0.1.js"
     ></script>
+    <script
+      async
+      custom-element="amp-form"
+      src="https://cdn.ampproject.org/v0/amp-form-0.1.js"
+    ></script>
+
     <style amp4email-boilerplate>
       body {
         visibility: hidden;
@@ -40,7 +41,7 @@
   <body>
     <h3>Szia Lajos!</h3>
     <amp-list
-      src="{{.ApiUrl}}/api/invoices?token={{.Token}}"
+      src="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
       binding="no"
       layout="fixed-height"
       height="44"
@@ -48,9 +49,34 @@
     >
       <template type="amp-mustache">
         <div class="row">
-          <div>{{"{{"}}filename{{"}}"}}</div>
-          <div>{{"{{"}}receivedAt{{"}}"}}</div>
-          <div>{{"{{"}}status{{"}}"}}</div>
+          <div>{{invoiceId}}</div>
+          <div>{{filename}}</div>
+          <div>{{receivedAt}}</div>
+          <div>{{status}}</div>
+          <form
+            method="post"
+            action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+          >
+            <fieldset>
+              <input type="hidden" name="invoiceId" value="{{invoiceId}}" />
+              <input type="hidden" name="status" value="[[.Accepted]]" />
+              <input type="submit" value="Accept" />
+            </fieldset>
+            <div submit-success>Accept successful!</div>
+            <div submit-error>Accept failed!</div>
+          </form>
+          <form
+            method="post"
+            action-xhr="[[.ApiUrl]]/api/invoices?token=[[.Token]]"
+          >
+            <fieldset>
+              <input type="hidden" name="invoiceId" value="{{invoiceId}}" />
+              <input type="hidden" name="status" value="[[.Rejected]]" />
+              <input type="submit" value="Reject" />
+            </fieldset>
+            <div submit-success>Reject successful!</div>
+            <div submit-error>Reject failed!</div>
+          </form>
         </div>
       </template>
     </amp-list>
