chore: use vat instead of tax

--- a/src/amp/email-summary.html
+++ b/src/amp/email-summary.html
@@ -107,7 +107,8 @@
                   <div>Net Price: {{netPrice}}</div>
                   <div>Gross Price: {{grossPrice}}</div>
                   <div>Currency: {{currency}}</div>
-                  <div>Tax: {{tax}}</div>
+                  <div>Vat Amount: {{vatAmount}}</div>
+                  <div>Vat Rate: {{vatRate}}</div>
                 </div>
               </div>
             </div>
